Auto Resume on Error

--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/ar_SA.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/ar_SA.properties
@@ -185,6 +185,8 @@ settings_global_speed_limiter=محدد السرعة العام
 settings_global_speed_limiter_description=حد سرعة التنزيل العام (0 يعني غير محدود)
 settings_show_average_speed=عرض متوسط السرعة
 settings_show_average_speed_description=عرض سرعة التنزيل كمعدل أو كدقة
+settings_retry_when_error=Retry When Error
+settings_retry_when_error_description=Retries if Download Encounters an Error
 settings_default_download_folder=مجلد التنزيل الافتراضي
 settings_default_download_folder_description=عند إضافة تنزيل جديد يتم استخدام هذا الموقع بشكل افتراضي
 settings_default_download_folder_describe=سيتم استخدام "{{folder}}"
