--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/bn_BD.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/bn_BD.properties
@@ -185,6 +185,8 @@ settings_global_speed_limiter=গ্লোবাল স্পীড লিমি
 settings_global_speed_limiter_description=বিশ্বব্যাপী ডাউনলোড গতি সীমা (0 মানে সীমাহীন)
 settings_show_average_speed=গড় গতি দেখান
 settings_show_average_speed_description=গড় বা নির্ভুলতা ডাউনলোড গতি
+settings_retry_when_error=Retry When Error
+settings_retry_when_error_description=Retries if Download Encounters an Error
 settings_default_download_folder=ডিফল্ট ডাউনলোড ফোল্ডার হিসেবে
 settings_default_download_folder_description=আপনি যখন একটি "নতুন ডাউনলোড" যোগ করেন, তখন এই অবস্থানটি ডিফল্টরূপে ব্যবহৃত হয়
 settings_default_download_folder_describe="{{folder}}" ব্যবহৃত হচ্ছে।
