--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/en_US.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/en_US.properties
@@ -186,6 +186,8 @@ settings_global_speed_limiter=Global Speed Limiter
 settings_global_speed_limiter_description=Global download speed limit (0 means unlimited)
 settings_show_average_speed=Show Average Speed
 settings_show_average_speed_description=Download speed in average or precision
+settings_retry_when_error=Retry When Error
+settings_retry_when_error_description=Retries if Download Encounters an Error
 settings_default_download_folder=Default Download Folder
 settings_default_download_folder_description=When you add new download this location is used by default
 settings_default_download_folder_describe="{{folder}}" will be used
