--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/es_ES.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/es_ES.properties
@@ -185,6 +185,8 @@ settings_global_speed_limiter=Limitador global de velocidad
 settings_global_speed_limiter_description=Límite global de velocidad de descarga (0 significa ilimitado)
 settings_show_average_speed=Mostrar velocidad promedio
 settings_show_average_speed_description=Velocidad de descarga promedio o precisa
+settings_retry_when_error=Retry When Error
+settings_retry_when_error_description=Retries if Download Encounters an Error
 settings_default_download_folder=Carpeta de descargas por defecto
 settings_default_download_folder_description=Al añadir una nueva descarga, se usa esta ubicación por defecto
 settings_default_download_folder_describe=Se usará "{{folder}}"
