--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/fa_IR.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/fa_IR.properties
@@ -185,6 +185,8 @@ settings_global_speed_limiter=محدودکننده سرعت کلی
 settings_global_speed_limiter_description=سرعت کلی دانلود به این مقدار محدود می شود (0 به معنای بدون محدودیت)
 settings_show_average_speed=نمایش سرعت میانگین
 settings_show_average_speed_description=سرعت دانلود به‌صورت میانگین یا دقیق نمایش داده شود
+settings_retry_when_error=Retry When Error
+settings_retry_when_error_description=Retries if Download Encounters an Error
 settings_default_download_folder=پوشه دانلود پیش‌فرض
 settings_default_download_folder_description=هنگامی که دانلود جدیدی اضافه می‌کنید، این مکان به‌طور پیش‌فرض استفاده می‌شود
 settings_default_download_folder_describe="{{folder}}" استفاده خواهد شد
