--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/fr_FR.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/fr_FR.properties
@@ -185,6 +185,8 @@ settings_global_speed_limiter=Limiteur de vitesse global
 settings_global_speed_limiter_description=Limite globale de vitesse de téléchargement (0 \= illimité)
 settings_show_average_speed=Afficher la vitesse moyenne
 settings_show_average_speed_description=Vitesse de téléchargement en moyenne ou avec précision
+settings_retry_when_error=Retry When Error
+settings_retry_when_error_description=Retries if Download Encounters an Error
 settings_default_download_folder=Dossier de téléchargement par défaut
 settings_default_download_folder_description=Lorsque vous ajoutez un nouveau téléchargement, cet emplacement est utilisé par défaut
 settings_default_download_folder_describe="{{folder}}" sera utilisé
