--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/pt_BR.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/pt_BR.properties
@@ -185,6 +185,8 @@ settings_global_speed_limiter=Limitador de Velocidade Global
 settings_global_speed_limiter_description=Limite da velocidade de download global (0 significa ilimitado)
 settings_show_average_speed=Mostrar Velocidade Média
 settings_show_average_speed_description=Velocidade de download em média ou precisão
+settings_retry_when_error=Retry When Error
+settings_retry_when_error_description=Retries if Download Encounters an Error
 settings_default_download_folder=Pasta de Download Padrão
 settings_default_download_folder_description=Quando você adicionar um novo download, este local é usado por padrão
 settings_default_download_folder_describe="{{folder}}" será usada
