--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/ru_RU.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/ru_RU.properties
@@ -185,6 +185,8 @@ settings_global_speed_limiter=Глобальный Ограничитель Ск
 settings_global_speed_limiter_description=Глобальное ограничение скорости загрузки (0 означает неограниченную)
 settings_show_average_speed=Показывать Среднюю Скорость
 settings_show_average_speed_description=Скорость загрузки в среднем или точном значении
+settings_retry_when_error=Retry When Error
+settings_retry_when_error_description=Retries if Download Encounters an Error
 settings_default_download_folder=Папка Загрузки По умолчанию
 settings_default_download_folder_description=При добавлении новой загрузки это расположение используется по умолчанию
 settings_default_download_folder_describe="{{folder}}" будет использоваться
