--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/sq_AL.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/sq_AL.properties
@@ -185,6 +185,8 @@ settings_global_speed_limiter=Kufizues Global i Shpejtësisë
 settings_global_speed_limiter_description=Kufiri global i shpejtësisë së shkarkimit (0 do të thotë pa kufi)
 settings_show_average_speed=Shfaq Shpejtësinë Mesatare
 settings_show_average_speed_description=Shkarko shpejtësinë në mesatare ose me saktësi
+settings_retry_when_error=Retry When Error
+settings_retry_when_error_description=Retries if Download Encounters an Error
 settings_default_download_folder=Dosja e Paracaktuar e Shkarkimeve
 settings_default_download_folder_description=Kur shton një shkarkim të ri, kjo vendndodhje përdoret si parazgjedhje
 settings_default_download_folder_describe=Dosja “{{folder}}” do të përdoret
