--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/tr_TR.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/tr_TR.properties
@@ -185,6 +185,8 @@ settings_global_speed_limiter=Genel Hız Sınırlayıcı
 settings_global_speed_limiter_description=Genel indirme hız sınırı (0 sınırsız demektir)
 settings_show_average_speed=Ortalama Hızı Göster
 settings_show_average_speed_description=İndirme hızını ortalama veya hassasiyetle göster
+settings_retry_when_error=Retry When Error
+settings_retry_when_error_description=Retries if Download Encounters an Error
 settings_default_download_folder=Varsayılan İndirme Klasörü
 settings_default_download_folder_description=Yeni bir indirme eklediğinizde bu konum varsayılan olarak kullanılır
 settings_default_download_folder_describe="{{folder}}" kullanılacak
