--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/uk_UA.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/uk_UA.properties
@@ -185,6 +185,8 @@ settings_global_speed_limiter=Глобальні обмеження швидко
 settings_global_speed_limiter_description=Глобальний ліміт швидкості завантаження (0 - необмежена)
 settings_show_average_speed=Показати середню швидкість
 settings_show_average_speed_description=Показувати середню або точну швидкість завантаження
+settings_retry_when_error=Retry When Error
+settings_retry_when_error_description=Retries if Download Encounters an Error
 settings_default_download_folder=Каталог завантажень за замовчуванням
 settings_default_download_folder_description=При створенні нового завантаження вказане розташування файлу буде використане за замовчуванням
 settings_default_download_folder_describe="{{folder}}" буде використано
