--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/zh_TW.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/zh_TW.properties
@@ -185,6 +185,8 @@ settings_global_speed_limiter=全域速度限制
 settings_global_speed_limiter_description=全域下載速度限制 (0 表示無限制)
 settings_show_average_speed=顯示平均速度
 settings_show_average_speed_description=下載速度
+settings_retry_when_error=Retry When Error
+settings_retry_when_error_description=Retries if Download Encounters an Error
 settings_default_download_folder=預設下載資料夾
 settings_default_download_folder_description=當您添加新的下載項目時，預設使用此位置儲存文件
 settings_default_download_folder_describe=將使用 {{folder}}
