--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/zh_CN.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/zh_CN.properties
@@ -185,6 +185,8 @@ settings_global_speed_limiter=全局速度限制
 settings_global_speed_limiter_description=全局下载速度限制 (0 表示无限制)
 settings_show_average_speed=显示平均速度
 settings_show_average_speed_description=下载速度
+settings_retry_when_error=Retry When Error
+settings_retry_when_error_description=Retries if Download Encounters an Error
 settings_default_download_folder=默认下载文件夹
 settings_default_download_folder_description=当您添加新的下载项时，默认使用此位置保存文件
 settings_default_download_folder_describe=将使用 {{folder}}
