--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/ar_SA.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/ar_SA.properties
@@ -164,6 +164,8 @@ queue_max_concurrent_download=أقصى عدد تنزيلات متزامنة
 queue_max_concurrent_download_description=أقصى عدد من التنزيلات لهذا الطابور
 queue_automatic_stop=إيقاف تلقائي
 queue_automatic_stop_description=إيقاف الطابور تلقائياً عند عدم وجود عناصر فيه
+queue_set_as_main=Set as Main Queue
+queue_set_as_main_description=Automatically add Downloads to this queue
 queue_scheduler=جدولة
 queue_enable_scheduler=تفعيل المجدول
 queue_active_days=الأيام النشطة
