--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/en_US.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/en_US.properties
@@ -165,6 +165,8 @@ queue_max_concurrent_download=Max concurrent download
 queue_max_concurrent_download_description=Max download for this queue
 queue_automatic_stop=Automatic stop
 queue_automatic_stop_description=Automatic stop queue when there is no item in it
+queue_set_as_main=Set as Main Queue
+queue_set_as_main_description=Automatically add Downloads to this queue
 queue_scheduler=Scheduler
 queue_enable_scheduler=Enable Scheduler
 queue_active_days=Active Days
