--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/es_ES.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/es_ES.properties
@@ -164,6 +164,8 @@ queue_max_concurrent_download=Máximas descargas simultáneas
 queue_max_concurrent_download_description=Máximas descargas para esta cola
 queue_automatic_stop=Detener automáticamente
 queue_automatic_stop_description=Detener automáticamente la cola cuando no hay ningún elemento en ella
+queue_set_as_main=Set as Main Queue
+queue_set_as_main_description=Automatically add Downloads to this queue
 queue_scheduler=Programador
 queue_enable_scheduler=Activar programador
 queue_active_days=Días activos
