--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/fa_IR.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/fa_IR.properties
@@ -164,6 +164,8 @@ queue_max_concurrent_download=حداکثر دانلود همزمان
 queue_max_concurrent_download_description=حداکثر دانلود همزمان برای این صف
 queue_automatic_stop=توقف خودکار
 queue_automatic_stop_description=توقف خودکار صف وقتی آیتمی در آن وجود ندارد
+queue_set_as_main=Set as Main Queue
+queue_set_as_main_description=Automatically add Downloads to this queue
 queue_scheduler=زمان‌بندی
 queue_enable_scheduler=فعال‌سازی زمان‌بندی
 queue_active_days=روزهای فعال
