--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/fr_FR.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/fr_FR.properties
@@ -164,6 +164,8 @@ queue_max_concurrent_download=Téléchargements simultanés max
 queue_max_concurrent_download_description=Téléchargements maximum pour cette file d'attente
 queue_automatic_stop=Arrêt automatique
 queue_automatic_stop_description=Arrêt automatique de la file d'attente lorsqu'elle ne contient plus d'éléments
+queue_set_as_main=Set as Main Queue
+queue_set_as_main_description=Automatically add Downloads to this queue
 queue_scheduler=Planificateur
 queue_enable_scheduler=Activer le planificateur
 queue_active_days=Jours d'activité
