--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/pt_BR.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/pt_BR.properties
@@ -164,6 +164,8 @@ queue_max_concurrent_download=Download máximo simultâneo
 queue_max_concurrent_download_description=Download máximo para esta fila
 queue_automatic_stop=Parada automática
 queue_automatic_stop_description=Parar automaticamente a fila quando não houver nenhum item nela
+queue_set_as_main=Set as Main Queue
+queue_set_as_main_description=Automatically add Downloads to this queue
 queue_scheduler=Agendador
 queue_enable_scheduler=Ativar o agendador
 queue_active_days=Dias Ativos
