--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/sq_AL.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/sq_AL.properties
@@ -164,6 +164,8 @@ queue_max_concurrent_download=Shkarkim maksimal i njëkohshëm
 queue_max_concurrent_download_description=Shkarkim maksimal për këtë radhë
 queue_automatic_stop=Ndalim automatik
 queue_automatic_stop_description=Ndalim automatik i radhës kur nuk ka artikuj në të
+queue_set_as_main=Set as Main Queue
+queue_set_as_main_description=Automatically add Downloads to this queue
 queue_scheduler=Planifikuesi
 queue_enable_scheduler=Aktivizo Planifikuesin
 queue_active_days=Ditët aktive
