--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/tr_TR.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/tr_TR.properties
@@ -164,6 +164,8 @@ queue_max_concurrent_download=Maksimum eşzamanlı indirme
 queue_max_concurrent_download_description=Bu sıra için maksimum indirme
 queue_automatic_stop=Otomatik durdurma
 queue_automatic_stop_description=Sırada öğe olmadığında otomatik durdurma
+queue_set_as_main=Set as Main Queue
+queue_set_as_main_description=Automatically add Downloads to this queue
 queue_scheduler=Zamanlayıcı
 queue_enable_scheduler=Zamanlayıcıyı Etkinleştir
 queue_active_days=Aktif Günler
