--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/uk_UA.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/uk_UA.properties
@@ -164,6 +164,8 @@ queue_max_concurrent_download=Максимальна кількість одно
 queue_max_concurrent_download_description=Максимальна кількість завантажень для цієї черги
 queue_automatic_stop=Автоматична зупинка
 queue_automatic_stop_description=Автоматично зупиняти чергу при відсутності елементів в ній
+queue_set_as_main=Set as Main Queue
+queue_set_as_main_description=Automatically add Downloads to this queue
 queue_scheduler=Планувальник
 queue_enable_scheduler=Увімкнути Планувальник
 queue_active_days=Дні
