--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/zh_CN.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/zh_CN.properties
@@ -164,6 +164,8 @@ queue_max_concurrent_download=下载最大并发数
 queue_max_concurrent_download_description=此队列最大同时下载个数
 queue_automatic_stop=自动停止
 queue_automatic_stop_description=当队列中没有下载项时自动停止
+queue_set_as_main=Set as Main Queue
+queue_set_as_main_description=Automatically add Downloads to this queue
 queue_scheduler=计划任务
 queue_enable_scheduler=启用计划任务
 queue_active_days=每周运行日
