--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/zh_TW.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/zh_TW.properties
@@ -164,6 +164,8 @@ queue_max_concurrent_download=下載最大並發數
 queue_max_concurrent_download_description=此佇列最大同時下載個數
 queue_automatic_stop=自動停止
 queue_automatic_stop_description=當佇列中沒有下載項目時自動停止
+queue_set_as_main=Set as Main Queue
+queue_set_as_main_description=Automatically add Downloads to this queue
 queue_scheduler=計劃任務
 queue_enable_scheduler=啟用計劃任務
 queue_active_days=每週執行日
