--- a/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/en_US.properties
+++ b/shared/resources/src/main/resources/com/abdownloadmanager/resources/locales/en_US.properties
@@ -15,6 +15,8 @@ drop_link_or_file_here=Drop link or file here.
 nothing_will_be_imported=Nothing will be imported
 n_links_will_be_imported={{count}} links will be imported
 n_items_selected={{count}} items selected
+settings_use_category_by_default=Use category by default
+settings_use_category_by_default_description=Use category by default when adding a download.
 delete=Delete
 remove=Remove
 cancel=Cancel
